tests/fail/print/missing_argument.tox
fn main() {
    print;//error: No rules expected ';'
}